adding 2fa, 42 oauth, avatar profile picture

--- a/src/frontend/account.html
+++ b/src/frontend/account.html
@@ -23,6 +23,14 @@
         <h3>Ceci est les info de 42</h3>
         
     </div>
+    <div id="avatar-edit">
+        <form id="avatar-form">
+            <label for="avatar">Changer d'Avatar</label>
+            <input type="file" name="avatar" id="avatar" accept="image/*">
+            <button type="submit">Changer la photo de profil</button>
+        </form>
+        <p id="status-message"></p>
+    </div>
 </body>
 <script src="js/userInfo.js" defer></script> 
 </html>
