--- a/src/frontend/login.html
+++ b/src/frontend/login.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Login</h1>
+        <h1>Login Page</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
