--- a/src/blockchain/index.html
+++ b/src/blockchain/index.html
@@ -11,7 +11,9 @@
 
 <body>
     <button id="connectButton">Connect Wallet</button>
-	<button id="salut">get balance</button>
+	<button id="getNumber">get Number</button>
+	<button id="incr">Increment</button>
+	<button id="decr">Decrement</button>
 </body>
 
 <script src="./scripts.js"></script>
