--- a/src/blockchain/index.html
+++ b/src/blockchain/index.html
@@ -2,18 +2,22 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <!-- Charger ethers.js depuis jsdelivr -->
-    <script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.umd.min.js" type="application/javascript"></script>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Document</title>
+	<!-- Charger ethers.js depuis jsdelivr -->
+	<script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.umd.min.js"
+		type="application/javascript"></script>
+	<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <button id="connectButton">Connect Wallet</button>
-	<button id="getNumber">get Number</button>
-	<button id="incr">Increment</button>
-	<button id="decr">Decrement</button>
+	<div id="button">
+		<button id="connectButton">Connect Wallet</button>
+		<button id="getNumber">get Number</button>
+		<button id="incr">Increment</button>
+		<button id="decr">Decrement</button>
+	</div>
 </body>
 
 <script src="./scripts.js"></script>
