--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -12,9 +12,14 @@
 		<link rel="stylesheet" href="src/styles/global.css" />
 	</head>
 	<body>
+		
 		<div id="app" class="h-100 d-flex flex-column"></div>
 		<script type="module" src="src/js/app.js"></script>
 		<!-- LIB -->
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+		<script src="https://unpkg.com/lucide@latest"></script>
 	</body>
+	<script>
+			lucide.createIcons();
+	</script>
 </html>
