--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -1,25 +1,33 @@
 <!DOCTYPE html>
 <html lang="en" data-bs-theme="dark">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<base href="/" />
-		<link rel="icon" type="image/svg" href="./public/logo_trans.svg" />
-		<!-- <title>TRANSCENDAAANCCEEEEEEEE</title> -->
-		<!-- LIB -->
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" />
-		<link rel="stylesheet" href="src/styles/global.css" />
-	</head>
-	<body>
-		
-		<div id="app" class="h-100 d-flex flex-column"></div>
-		<script type="module" src="src/js/app.js"></script>
-		<!-- LIB -->
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-		<script src="https://unpkg.com/lucide@latest"></script>
-	</body>
-	<script>
-			lucide.createIcons();
-	</script>
+
+<head>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<base href="/" />
+	<link rel="icon" type="image/svg" href="./public/logo_trans.svg" />
+	<!-- <title>TRANSCENDAAANCCEEEEEEEE</title> -->
+	<!-- LIB -->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+	<script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.umd.min.js"
+		type="application/javascript"></script>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" />
+	<link rel="stylesheet" href="src/styles/global.css" />
+</head>
+
+<body>
+
+	<div id="app" class="h-100 d-flex flex-column"></div>
+	<script type="module" src="src/js/app.js"></script>
+	<!-- LIB -->
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+		crossorigin="anonymous"></script>
+	<script src="https://unpkg.com/lucide@latest"></script>
+</body>
+<script>
+	lucide.createIcons();
+</script>
+
 </html>
