--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -24,8 +24,8 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
 		crossorigin="anonymous"></script>
-	<script src="https://unpkg.com/lucide@latest"></script>
-</body>
+		<script src="https://unpkg.com/lucide@latest/dist/umd/lucide.js"></script>
+	</body>
 <script>
 	lucide.createIcons();
 </script>
