--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -14,6 +14,15 @@
 		type="application/javascript"></script>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" />
 	<link rel="stylesheet" href="src/styles/global.css" />
+	<!-- THREE -->
+	<script type="importmap">
+		{
+			"imports": {
+				"three": "https://cdn.jsdelivr.net/npm/three@0.171.0/+esm",
+				"three/examples/jsm/": "https://cdn.jsdelivr.net/npm/three@0.171.0/examples/jsm/"
+			}
+		}
+	</script>
 </head>
 
 <body>
